# busca_ip

./: .gitignore  DockerFile  README.md  app.py  packages.txt  packges.txt  pesquisa_ip.db  pyproject.toml  requeriments.txt  requirements.txt  requiriments.txt
app/: app.py  banco.py  extract.py  extract_pdf.py  find_ips.py  load.py  pipeline.py  transform.py
