[tool.poetry]
name = "busca-ip"
version = "0.1.0"
description = ""
authors = ["claudio_pontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
lxml = "^5.1.0"
sqlalchemy = "^2.0.29"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
